@@ -306,9 +306,15 @@
                         </a>
                     </li>
                     <li class="active">
-                        <a href="../../pages/ui/AddEmp.html">
+                        <a href="../../pages/AdminUi/AddEmp.html">
                             <i class="material-icons">add</i>
                             <span>Employee</span>
+                        </a>
+                    </li>
+                    <li class="active">
+                        <a href="../../pages/UserUi/Home.html">
+                            <i class="material-icons">search</i>
+                            <span>User Home</span>
                         </a>
                     </li>
 				</ul>
